# twelve-pillar-protocol

./: .gitignore  ANNEX_AI.md  ANNEX_AJ.md  ANNEX_AK.md  ANNEX_AL.md  ANNEX_AR.md  ANNEX_REGISTRY.md  Acceptance_Protocol.md  Adversarial_Narrative_Simulation.md  Annual_Compound_Simulation.md  Audit_Note.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Citizen_Facing_Rights_Layer.md  Humane_Constitution.md  LICENSE  Master_Protocol.md  P014_Preactivation_Disclosure.md  Patch_Log.md  Protocol_Optimization_Proposals.md  README.md  REGISTER_DISCLOSURE_PROTOCOL.md  SECURITY.md  Technical_Reference.md  Threat_Register.md  White_Paper.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: claim-audit.md  config.yml  critique.md  p014-challenge.md  pilot-evidence.md  reader-comprehension.md  real-world-analogue.md  threat-report.md  translation.md
.github/workflows/: ci.yml
app/: index.html  package-lock.json  package.json  tailwind.config.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: main.rs
architecture/: amendment_protocol.md  drift_chain.md  implementation_binding.md  invariants.md  parameter_registry.md
docs/: ADVERSARIAL_AUDIT.md  Adversarial_Narrative_Simulation.md  Annual_Compound_Simulation.md  Claims_Evidence_Register.md  INVARIANTS.md  LOGICAL_FALLACY_REVIEW.md  One_Page_Overview.md  P014_Preactivation_Disclosure.md  Pilot_Evidence_Roadmap.md  Public_FAQ.md  Public_Readiness_Guide.md  SPECIFICATIONS.md  Source_Grounded_Content_Prompts.md
founding/: commitments.md
scripts/: export_corpus.py  validate_corpus.py
simulations/: __init__.py  model_outline.py  test_demurrage.py  test_ec_demurrage.py  test_fap_integrity.py  test_model_outline.py
(+56 files in other folders)
