[package]
name = "humane-constitution"
version = "0.1.0"
description = "Humane Constitution — Desktop Interface"
authors = ["Cameron Mozart"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This is out of Tauri's control, see https://github.com/rust-lang/cargo/issues/6313
name = "humane_constitution_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-window-state = "2"

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Allows LLVM to perform better optimization
lto = true        # Enables link-time-optimizations
opt-level = "s"   # Optimizes for binary size
strip = true      # Remove debug symbols
